--- a/.github/workflows/auto-merge-my-prs.yml
+++ b/.github/workflows/auto-merge-my-prs.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Merge PR
         run: |
           PR_AUTHOR="${{ github.event.pull_request.user.login }}"
-          if [[ "$PR_AUTHOR" == "<YOUR_GITHUB_USERNAME>" ]]; 
+          if [[ "$PR_AUTHOR" == "japamat" ]]; 
           then
             gh pr merge "${{ github.event.pull_request.number }}" --merge
           fi
