--- a/.github/workflows/auto-merge-my-prs.yml
+++ b/.github/workflows/auto-merge-my-prs.yml
@@ -13,6 +13,15 @@ jobs:
       pull-requests: write
 
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
+
+      - name: Install GitHub CLI
+        run: |
+          sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key C99B11DEB97541F0
+          sudo apt-add-repository https://cli.github.com/packages
+          sudo apt update
+          sudo apt install gh
       - name: Merge PR
         run: |
           PR_AUTHOR="${{ github.event.pull_request.user.login }}"
